# storage/api-docs/api-docs.json
@@ -42,7 +42,25 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Returns all the hiking routes OSM2CAI IDs based on the given region code and SDA number. \n     *                       These ids can be used in the geojson API hiking-route"
+                        "description": "Returns all the hiking routes OSM2CAI IDs based on the given region code and SDA number. \n     *                       These ids can be used in the geojson API hiking-route",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "description": "Internal osm2cai Identifier",
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": [
+                                        1269,
+                                        652,
+                                        273
+                                    ]
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -77,7 +95,25 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Returns all the hiking routes OSM IDs based on the given region code and SDA number.\n     *                       OSMID can be used in hiking-route-osm API or directly in OpenStreetMap relation by the following URL:\n     *                       https://openstreetmap.org/relation/{OSMID}. Remember that the data on OSM can be differente from data in \n     *                       OSM2CAI after validation."
+                        "description": "Returns all the hiking routes OSM IDs based on the given region code and SDA number.\n     *                       OSMID can be used in hiking-route-osm API or directly in OpenStreetMap relation by the following URL:\n     *                       https://openstreetmap.org/relation/{OSMID}. Remember that the data on OSM can be differente from data in \n     *                       OSM2CAI after validation.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "OSM": {
+                                            "description": "Open Streen Map identification",
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": [
+                                        7766787,
+                                        3151885,
+                                        2736729
+                                    ]
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -102,7 +138,98 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Returns the geojson of a Hiking Route based on the given OSM2CAI ID. The properties section\n     *                       has the following metadata: id (OSM2CAI ID), relation_ID (OSMID), source (from SDA=3 and over must be survey:CAI or \n     *                       other values accepted by CAI as valid source), cai_scale (CAI scale difficulty: T,E,EE),\n     *                       from (start point), to (end point), ref (local ref hiking route number must be three number and a letter only in last position for variants)\n     *                       sda (stato di accatastamento).\n     *                       Geometry section contains all hiking routes coordinates (WGS84), according to geojson standard."
+                        "description": "Returns the geojson of a Hiking Route based on the given OSM2CAI ID. The properties    section has the following metadata: id (OSM2CAI ID), relation_ID (OSMID), source (from SDA=3 and  over must be survey:CAI or other values accepted by CAI as valid source), cai_scale (CAI scale difficulty: T,E,EE), from (start point), to (end point), ref (local ref hiking route number must be three number and a letter only in last position for variants) sda (stato di accatastamento). Geometry section contains all hiking routes coordinates (WGS84), according to geojson standard.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "type": {
+                                            "description": "Geojson type",
+                                            "type": "string"
+                                        },
+                                        "properties": {
+                                            "properties": {
+                                                "id": {
+                                                    "description": "OSM2CAI ID",
+                                                    "type": "integer"
+                                                },
+                                                "relation_ID": {
+                                                    "description": "OSMID",
+                                                    "type": "integer"
+                                                },
+                                                "source": {
+                                                    "description": "from SDA=3 and over must be survey:CAI or other values accepted by CAI as valid source",
+                                                    "type": "string"
+                                                },
+                                                "cai_scale": {
+                                                    "description": "CAI scale difficulty: T E EE",
+                                                    "type": "string"
+                                                },
+                                                "from": {
+                                                    "description": "start point",
+                                                    "type": "string"
+                                                },
+                                                "to": {
+                                                    "description": "end point",
+                                                    "type": "string"
+                                                },
+                                                "ref": {
+                                                    "description": "local ref hiking route number must be three number and a letter only in last position for variants",
+                                                    "type": "string"
+                                                },
+                                                "sda": {
+                                                    "description": "stato di accatastamento",
+                                                    "type": "integer"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "geometry": {
+                                            "properties": {
+                                                "type": {
+                                                    "description": "Postgis geometry types: Point, LineString, LinearRing, Polygon, MultiPoint, MultiLineString, MultiPolygon",
+                                                    "type": "string"
+                                                },
+                                                "coordinates": {
+                                                    "description": "hiking routes coordinates (WGS84)",
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "type": "Feature",
+                                        "properties": {
+                                            "id": 2421,
+                                            "relation_id": 4179533,
+                                            "source": "survey:CAI",
+                                            "cai_scale": "E",
+                                            "from": "Castellare",
+                                            "to": "Campo di Croce",
+                                            "ref": "117",
+                                            "sda": 3
+                                        },
+                                        "geometry": {
+                                            "type": "MultiLineString",
+                                            "coordinates": [
+                                                [
+                                                    [
+                                                        10.4495294,
+                                                        43.7615252
+                                                    ],
+                                                    [
+                                                        10.4495998,
+                                                        43.7615566
+                                                    ]
+                                                ]
+                                            ]
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -127,7 +254,98 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Returns the geojson of a Hiking Route based on the given OSM2CAI ID. The properties section\n     *                       has the following metadata: id (OSM2CAI ID), relation_ID (OSMID), source (from SDA=3 and over must be survey:CAI or \n     *                       other values accepted by CAI as valid source), cai_scale (CAI scale difficulty: T,E,EE),\n     *                       from (start point), to (end point), ref (local ref hiking route number must be three number and a letter only in last position for variants)\n     *                       sda (stato di accatastamento).\n     *                       Geometry section contains all hiking routes coordinates (WGS84), according to geojson standard."
+                        "description": "Returns the geojson of a Hiking Route based on the given OSM2CAI ID. The properties section\n     *                       has the following metadata: id (OSM2CAI ID), relation_ID (OSMID), source (from SDA=3 and over must be survey:CAI or \n     *                       other values accepted by CAI as valid source), cai_scale (CAI scale difficulty: T,E,EE),\n     *                       from (start point), to (end point), ref (local ref hiking route number must be three number and a letter only in last position for variants)\n     *                       sda (stato di accatastamento).\n     *                       Geometry section contains all hiking routes coordinates (WGS84), according to geojson standard.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "type": {
+                                            "description": "Geojson type",
+                                            "type": "string"
+                                        },
+                                        "properties": {
+                                            "properties": {
+                                                "id": {
+                                                    "description": "OSM2CAI ID",
+                                                    "type": "integer"
+                                                },
+                                                "relation_ID": {
+                                                    "description": "OSMID",
+                                                    "type": "integer"
+                                                },
+                                                "source": {
+                                                    "description": "from SDA=3 and over must be survey:CAI or other values accepted by CAI as valid source",
+                                                    "type": "string"
+                                                },
+                                                "cai_scale": {
+                                                    "description": "CAI scale difficulty: T E EE",
+                                                    "type": "string"
+                                                },
+                                                "from": {
+                                                    "description": "start point",
+                                                    "type": "string"
+                                                },
+                                                "to": {
+                                                    "description": "end point",
+                                                    "type": "string"
+                                                },
+                                                "ref": {
+                                                    "description": "local ref hiking route number must be three number and a letter only in last position for variants",
+                                                    "type": "string"
+                                                },
+                                                "sda": {
+                                                    "description": "stato di accatastamento",
+                                                    "type": "integer"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "geometry": {
+                                            "properties": {
+                                                "type": {
+                                                    "description": "Postgis geometry types: Point, LineString, LinearRing, Polygon, MultiPoint, MultiLineString, MultiPolygon",
+                                                    "type": "string"
+                                                },
+                                                "coordinates": {
+                                                    "description": "hiking routes coordinates (WGS84)",
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "type": "Feature",
+                                        "properties": {
+                                            "id": 2421,
+                                            "relation_id": 4179533,
+                                            "source": "survey:CAI",
+                                            "cai_scale": "E",
+                                            "from": "Castellare",
+                                            "to": "Campo di Croce",
+                                            "ref": "117",
+                                            "sda": 3
+                                        },
+                                        "geometry": {
+                                            "type": "MultiLineString",
+                                            "coordinates": [
+                                                [
+                                                    [
+                                                        10.4495294,
+                                                        43.7615252
+                                                    ],
+                                                    [
+                                                        10.4495998,
+                                                        43.7615566
+                                                    ]
+                                                ]
+                                            ]
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
